--- a/navbar1/index.html
+++ b/navbar1/index.html
@@ -10,7 +10,7 @@
     <h2>Navbar</h2>
     <nav class="navbar">
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="home.html" class="demo">Home</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="project.html">Project</a></li>
             <li><a href="profile.html">Profile</a></li>
